--- a/clashNode.yaml
+++ b/clashNode.yaml
@@ -16,42 +16,32 @@ dns:
     - tls://dns.google:853
 proxies:
   - {name: ???? _US_美国, server: 104.21.75.246, port: 80, type: vmess, uuid: c458695d-6908-45c3-9512-e0c46418454c, alterId: 0, cipher: auto, tls: false, tfo: false, skip-cert-verify: false, network: ws, ws-opts: {path: /, headers: {Host: sbl2.shabijichang.com}}}
-  - {name: ???? _US_美国 2, server: 28.namesilo123.top, port: 80, type: vmess, uuid: 309f84b9-49dd-408d-a0b6-8860393be802, alterId: 0, cipher: auto, tls: false, tfo: false, skip-cert-verify: false, network: ws, ws-opts: {path: "/grdhhgrdhhhhhhj?ed=2048", headers: {Host: uszhang.sanfen002.top}}}
-  - {name: ???? _US_美国 3, server: 29.namesilo123.top, port: 8880, type: vmess, uuid: 309f84b9-49dd-408d-a0b6-8860393be802, alterId: 0, cipher: auto, tls: false, tfo: false, skip-cert-verify: false, network: ws, ws-opts: {path: "/grdhhgrdhhhhhhj?ed=2048", headers: {Host: uszhang.sanfen002.top}}}
-  - {name: ???? _CN_中国->????_GB_英国, server: 112.29.94.23, port: 49223, type: vmess, uuid: 21a9bff2-72de-4e62-93ff-8b159f66d875, alterId: 64, cipher: auto, tls: false, tfo: false, skip-cert-verify: false}
-  - {name: ???? _US_美国->????_IN_印度, server: mm2.shabijichang.com, port: 80, type: vmess, uuid: c458695d-6908-45c3-9512-e0c46418454c, alterId: 0, cipher: auto, tls: false, tfo: false, skip-cert-verify: false, network: ws, ws-opts: {path: /, headers: {Host: mm2.shabijichang.com}}}
+  - {name: ???? _NL_荷兰, server: 154.85.1.130, port: 30000, type: vmess, uuid: 418048af-a293-4b99-9b0c-98ca3580dd24, alterId: 64, cipher: auto, tls: true, tfo: false, skip-cert-verify: false, network: ws, ws-opts: {path: /path/1698843555400}}
+  - {name: ???? _CA_加拿大, server: 23.227.39.84, port: 8080, type: vmess, uuid: 969f1909-c0d3-4c30-813d-3aec5c838b7d, alterId: 0, cipher: auto, tls: false, tfo: false, skip-cert-verify: false, network: ws, ws-opts: {path: /1IKYjV0r/, headers: {Host: dongtaiwang13.dtku47.xyz}}}
   - {name: ???? _US_美国->????_GB_英国, server: mrb2.shabijichang.com, port: 80, type: vmess, uuid: c458695d-6908-45c3-9512-e0c46418454c, alterId: 0, cipher: auto, tls: false, tfo: false, skip-cert-verify: false, network: ws, ws-opts: {path: /, headers: {Host: mrb2.shabijichang.com}}}
-  - {name: ???? _TR_土耳其, server: 193.46.56.210, port: 8443, type: vmess, uuid: b72694db-ed21-46c1-8923-325305fa787f, alterId: 0, cipher: auto, tls: true, tfo: false, skip-cert-verify: false}
-  - {name: ???? _JP_日本, server: 103.35.190.65, port: 443, type: vmess, uuid: ed531ebe-4971-47f9-a881-636d0b101a45, alterId: 0, cipher: auto, tls: false, tfo: false, skip-cert-verify: false, network: ws, ws-opts: {path: /}}
-  - {name: ???? _US_美国 4, server: 26.namesilo123.top, port: 2082, type: vmess, uuid: 309f84b9-49dd-408d-a0b6-8860393be802, alterId: 0, cipher: auto, tls: false, tfo: false, skip-cert-verify: false, network: ws, ws-opts: {path: "/grdhhgrdhhhhhhj?ed=2048", headers: {Host: uszhang.sanfen002.top}}}
-  - {name: ???? _US_美国 5, server: a7.wxlljc520.com, port: 443, type: vmess, uuid: b0e43362-72b7-49ac-8eb6-fff69e07cfae, alterId: 0, cipher: auto, tls: true, tfo: false, skip-cert-verify: false, network: ws, ws-opts: {path: /apple, headers: {Host: 777.golinkwuxian.top}}}
-  - {name: ???? _US_美国 6, server: a8.wxlljc520.com, port: 443, type: vmess, uuid: b0e43362-72b7-49ac-8eb6-fff69e07cfae, alterId: 0, cipher: auto, tls: true, tfo: false, skip-cert-verify: false, network: ws, ws-opts: {path: /apple, headers: {Host: 777.golinkwuxian.top}}}
-  - {name: ???? _US_美国->????_IR_伊朗, server: 104.26.13.8, port: 2053, type: vmess, uuid: a4089f68-2bb1-4734-d77a-8b049a80ae8c, alterId: 0, cipher: auto, tls: true, tfo: false, skip-cert-verify: false, network: ws, ws-opts: {path: /, headers: {Host: BAmIlo.ONlINeviSioNsTore.sITE}}}
-  - {name: ???? _US_美国 7, server: sbl2.shabijichang.com, port: 80, type: vmess, uuid: c458695d-6908-45c3-9512-e0c46418454c, alterId: 0, cipher: auto, tls: false, tfo: false, skip-cert-verify: false, network: ws, ws-opts: {path: /, headers: {Host: sbl2.shabijichang.com}}}
+  - {name: ???? _US_美国 2, server: sbl2.shabijichang.com, port: 80, type: vmess, uuid: c458695d-6908-45c3-9512-e0c46418454c, alterId: 0, cipher: auto, tls: false, tfo: false, skip-cert-verify: false, network: ws, ws-opts: {path: /, headers: {Host: sbl2.shabijichang.com}}}
+  - {name: ???? _US_美国 3, server: a8.wxlljc520.com, port: 443, type: vmess, uuid: b0e43362-72b7-49ac-8eb6-fff69e07cfae, alterId: 0, cipher: auto, tls: true, tfo: false, skip-cert-verify: false, network: ws, ws-opts: {path: /apple, headers: {Host: 777.golinkwuxian.top}}}
+  - {name: ???? _GB_英国, server: 172.99.190.109, port: 443, type: vmess, uuid: 03fcc618-b93d-6796-6aed-8a38c975d581, alterId: 0, cipher: auto, tls: true, tfo: false, skip-cert-verify: false, network: ws, ws-opts: {path: linkvws}}
+  - {name: ???? _GB_英国 2, server: 18.132.109.205, port: 22222, type: trojan, password: telegram-id-directvpn, skip-cert-verify: false}
   - {name: ???? _US_美国->????_GB_英国 2, server: ld2.shabijichang.com, port: 80, type: vmess, uuid: c458695d-6908-45c3-9512-e0c46418454c, alterId: 0, cipher: auto, tls: false, tfo: false, skip-cert-verify: false, network: ws, ws-opts: {path: /, headers: {Host: ld2.shabijichang.com}}}
-  - {name: ???? _US_美国->????_FR_法国, server: web.parspack.com, port: 2096, type: vmess, uuid: a98626c1-88ee-47db-ad1d-a8bd15910a83, alterId: 0, cipher: auto, tls: true, tfo: false, skip-cert-verify: false, network: ws, ws-opts: {path: "/?ed=2048", headers: {Host: tElEWebIOn.onlIneVIsioNStorE.sITE}}}
-  - {name: ???? _US_美国 8, server: 27.namesilo123.top, port: 8080, type: vmess, uuid: 309f84b9-49dd-408d-a0b6-8860393be802, alterId: 0, cipher: auto, tls: false, tfo: false, skip-cert-verify: false, network: ws, ws-opts: {path: "/grdhhgrdhhhhhhj?ed=2048", headers: {Host: uszhang.sanfen002.top}}}
+  - {name: ???? _IE_爱尔兰, server: 54.217.246.11, port: 22222, type: trojan, password: telegram-id-directvpn, skip-cert-verify: false}
+  - {name: ???? _GB_英国 3, server: 18.168.178.12, port: 22222, type: trojan, password: telegram-id-directvpn, skip-cert-verify: false}
 proxy-groups:
   - name: ?? 节点选择
     type: select
     proxies:
       - DIRECT
       - ???? _US_美国
+      - ???? _NL_荷兰
+      - ???? _CA_加拿大
+      - ???? _US_美国->????_GB_英国
       - ???? _US_美国 2
       - ???? _US_美国 3
-      - ???? _CN_中国->????_GB_英国
-      - ???? _US_美国->????_IN_印度
-      - ???? _US_美国->????_GB_英国
-      - ???? _TR_土耳其
-      - ???? _JP_日本
-      - ???? _US_美国 4
-      - ???? _US_美国 5
-      - ???? _US_美国 6
-      - ???? _US_美国->????_IR_伊朗
-      - ???? _US_美国 7
+      - ???? _GB_英国
+      - ???? _GB_英国 2
       - ???? _US_美国->????_GB_英国 2
-      - ???? _US_美国->????_FR_法国
-      - ???? _US_美国 8
+      - ???? _IE_爱尔兰
+      - ???? _GB_英国 3
   - name: ?? 全球直连
     type: select
     proxies:
@@ -68,21 +58,16 @@ proxy-groups:
       - ?? 节点选择
       - ?? 全球直连
       - ???? _US_美国
+      - ???? _NL_荷兰
+      - ???? _CA_加拿大
+      - ???? _US_美国->????_GB_英国
       - ???? _US_美国 2
       - ???? _US_美国 3
-      - ???? _CN_中国->????_GB_英国
-      - ???? _US_美国->????_IN_印度
-      - ???? _US_美国->????_GB_英国
-      - ???? _TR_土耳其
-      - ???? _JP_日本
-      - ???? _US_美国 4
-      - ???? _US_美国 5
-      - ???? _US_美国 6
-      - ???? _US_美国->????_IR_伊朗
-      - ???? _US_美国 7
+      - ???? _GB_英国
+      - ???? _GB_英国 2
       - ???? _US_美国->????_GB_英国 2
-      - ???? _US_美国->????_FR_法国
-      - ???? _US_美国 8
+      - ???? _IE_爱尔兰
+      - ???? _GB_英国 3
 rules:
   - DOMAIN-SUFFIX,acl4.ssr,?? 全球直连
   - DOMAIN-SUFFIX,ip6-localhost,?? 全球直连
